# PolyData

./: .gitignore  LICENSE  README.md  docker-compose.yaml
backend/: .dockerignore  Dockerfile  README.md  entrypoint.sh  manage.py  pyproject.toml
backend/src/account/migrations/: 0001_initial.py
backend/src/api/: urls.py
backend/src/catalog/: api.py  apps.py  file_formats.py  filters.py  forms.py  metadata_schemas.py  middleware.py  models.py  permissions.py  pygeoapi.py  serializers.py  services.py  signals.py  wagtail_hooks.py
backend/src/catalog/migrations/: 0001_initial.py  0002_datasettag_remove_dataset_tags_datasettaggeditem_and_more.py
backend/src/dashboard/templates/wagtailadmin/: admin_base.html  base.html  home.html  login.html
backend/src/ingestion/: services.py  tasks.py
backend/src/main/: celery.py  urls.py  views.py
backend/src/main/management/commands/: ensure_superuser.py  import_oidc_config.py
backend/src/main/settings/: base.py
backend/src/main/templates/main/: dataset_detail.html  dataset_list.html  home.html  organization_detail.html  organization_list.html  resource_detail.html  resource_list.html
frontend/: .dockerignore  Dockerfile
frontend/src/: README.md  nuxt.config.ts  package.json
frontend/src/app/: app.vue
frontend/src/app/composables/: useBackendBaseUrl.ts
frontend/src/app/pages/: index.vue
frontend/src/app/pages/datasets/: [id].vue  index.vue
frontend/src/app/pages/organizations/: [id].vue  index.vue
frontend/src/app/pages/resources/: [id].vue  index.vue
frontend/src/components/: ResourceMapPreview.vue  ResourceTablePreview.vue
